--- a/.github/workflows/web-auth.yml
+++ b/.github/workflows/web-auth.yml
@@ -10,19 +10,32 @@ permissions:
   pull-requests: read
 
 jobs:
-  check:
+  Linter:
     runs-on: ubuntu-latest
     container:
-      image: node:16
+      image: node:lts-alpine
     defaults:
       run:
         working-directory: web/auth
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-
     - name: Install dependencies
       run: npm ci --arch=x64 --platform=linuxmusl
+    - name: Lint
+      run: npm run lint
 
+  Build:
+    runs-on: ubuntu-latest
+    container:
+      image: node:lts-alpine
+    defaults:
+      run:
+        working-directory: web/auth
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Install dependencies
+      run: npm ci --arch=x64 --platform=linuxmusl
     - name: Build
       run: npm run build
