--- a/web/auth/tsconfig.json
+++ b/web/auth/tsconfig.json
@@ -1,22 +1,12 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "baseUrl": "./",
     "paths": {
-      "@pages/*": [
-        "src/pages/*"
-      ],
-      "@server/*": [
-        "src/server/*"
-      ],
-      "@app/*": [
-        "src/*"
-      ]
+      "@pages/*": ["src/pages/*"],
+      "@server/*": ["src/server/*"],
+      "@app/*": ["src/*"]
     },
     "allowJs": true,
     "skipLibCheck": true,
@@ -31,13 +21,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "gtag.js"
-  ]
+  "exclude": ["node_modules"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "gtag.js"]
 }
