fix: image search in v2 registries fix: wrong ts-proto version feat: update nestjs

--- a/images/proto/Dockerfile
+++ b/images/proto/Dockerfile
@@ -10,7 +10,7 @@ RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 777 "$GOPATH"
 
 RUN apk add nodejs npm alpine-sdk go protoc protobuf-dev rsync
 
-RUN npm i -g ts-proto @grpc/grpc-js
+RUN npm i -g ts-proto@1.96.0 @grpc/grpc-js
 
 RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26 && \
     go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2
