--- a/web/docker-compose.dev.yaml
+++ b/web/docker-compose.dev.yaml
@@ -52,11 +52,10 @@ services:
     platform: linux/amd64
     ports:
       - 9433:4433 # public
-      # To generate a new user, you have to expose the admin port
-      # Comment out the next line for this
-      # - 9434:4434
+      # WARNING: Do NOT expose the admin port in production!
+      - 9434:4434 # admin
     environment:
-      - KRATOS_ADMIN_URL=${KRATOS_ADMIN_URL:-http://kratos:4434}
+      - KRATOS_ADMIN_URL=${KRATOS_ADMIN_URL:-http://172.17.0.1:4434}
       - KRATOS_URL=${KRATOS_URL:-http://172.17.0.1:8000/kratos}
       - AUTH_URL=${AUTH_URL:-http://172.17.0.1:8000/auth}
       - DEV=${KRATOS_DEV:-false}
