fix: remove unused env variables

--- a/web/.env.example
+++ b/web/.env.example
@@ -9,3 +9,11 @@ COOKIE_SECRET=this_is_a_very_secret_cookie
 SMTP_USER=test
 SMTP_PASSWORD=test
 SMTP_URL=mailslurper:1025/?skip_ssl_verify=true&legacy_ssl=true
+
+# MacOS dependencies - more info in ./auth/README.md
+KRATOS_URL=http://host.docker.internal:8000/kratos
+KRATOS_ADMIN_URL=http://host.docker.internal:9434
+AUTH_URL=http://host.docker.internal:8000/auth
+SERVER_NAME=host.docker.internal
+AUTH_ADDRESS=host.docker.internal:9000
+CRUX_UI_ADDRESS=host.docker.internal:3000
