--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: test
+      run: pwd && ls -lah
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v3
       with:
