--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -13,20 +13,21 @@ permissions:
 jobs:
   lint:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
     defaults:
       run:
         working-directory: agent
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: test
-      run: pwd && ls -lah
+    - name: Setup Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: '1.18.x'
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v3
       with:
         version: v1.46
+        working-directory: agent
 
   security:
     runs-on: ubuntu-latest
