--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -26,7 +26,7 @@ jobs:
     - name: pwd
       run: pwd && ls -lah
     - name: Build-check crane
-      run: go build ./...
+      run: GOFLAGS="-buildvcs=false" go build ./...
     - name: Run golangci-lint
       run: GOFLAGS="-buildvcs=false" make lint
   security:
