--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: Load go mod
+      run: go mod tidy
     - name: Run golangci-lint
       run: make lint
   security:
