--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -8,7 +8,7 @@ on:
 permissions:
   contents: read
   pull-requests: read
-  packages: read
+  packages: write
 
 
 env:
@@ -29,7 +29,7 @@ jobs:
     - name: Load go mod
       run: go mod tidy
     - name: Run golangci-lint
-      run: make lint
+      run: pwd && make lint
   security:
     runs-on: ubuntu-latest
     container:
@@ -44,7 +44,7 @@ jobs:
       run: go mod tidy
     - name: Run gosec
       run: make security
-  check:
+  build:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
@@ -52,11 +52,29 @@ jobs:
       run:
         working-directory: agent
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Load go mod
+        run: go mod tidy
+
+      - name: Compile
+        run: make compile-both
       
-    - name: Build crane
-      run: go build cmd/crane/crane.go 
-      
-    - name: Build dagent
-      run: go build cmd/dagent/dagent.go 
+
+      - name: Docker build with latest tag
+        run: make image_version=test bbpb
+
+      - name: Docker build with latest tag
+        if: github.ref == 'refs/heads/develop'
+        run: make image_version=latest bbpb
+
+      - name: Docker build with stable tag
+        if: github.ref == 'refs/heads/main'
+        run: make image_version=stable bbpb
