--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -44,8 +44,30 @@ jobs:
       run: go mod tidy
     - name: Run gosec
       run: make security
+
+  test:
+    runs-on: ubuntu-latest
+    needs: [security, lint]
+    container:
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
+    defaults:
+      run:
+        working-directory: agent
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Load go mod
+      run: go mod tidy
+    - name: Run unit tests
+      run: make test-unit
+    # if we go public this is free from codecov.io
+    # - uses: codecov/codecov-action@v3
+    #   with:
+    #     files: ./coverage.cov
+
   build:
     runs-on: ubuntu-latest
+    needs: [test]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
     defaults:
@@ -70,10 +92,6 @@ jobs:
 
       - name: Compile
         run: make compile-both
-      
-
-      - name: Docker build with latest tag
-        run: make image_version=test bbpb
 
       - name: Docker build with latest tag
         if: github.ref == 'refs/heads/develop'
