--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -16,6 +16,23 @@ env:
   GOFLAGS: "-buildvcs=false"
 
 jobs:
+
+  select_version:
+    runs-on: ubuntu-latest
+    steps:
+    - name: magic
+      run: |
+        if [ $GITHUB_REF_TYPE == "branch" ]; then
+          case $GITHUB_REF in
+            "main")
+            echo "agent_tag=stable"
+            ;;
+            "develop")
+            echo "agent_tag=latest"
+            ;;
+          esac
+        fi
+      
   lint:
     runs-on: ubuntu-latest
     container:
@@ -100,3 +117,32 @@ jobs:
       - name: Docker build with stable tag
         if: github.ref == 'refs/heads/main'
         run: make image_version=stable bbpb
+        
+  sign_image:
+    runs-on: ubuntu-20.04
+    container:
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
+    needs: build
+    environment: Workflow - Protected
+    steps:
+    - name: Write signing key to disk
+      run: echo "${{ secrets.COSIGN_PRIVATE_KEY }}" > cosign.key
+
+    - name: Login to GHCR
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GHCR_PAT }}
+
+    - name: Sign container image dagent
+      run: | 
+        cosign sign --key cosign.key ghcr.io/dyrector-io/dyrectorio/agent/dagent:${GITHUB_SHA::7}
+      env:
+        COSIGN_PASSWORD: "${{ secrets.COSIGN_PASSWORD }}"
+    - name: Sign container image crane
+      run: |
+        cosign sign --key cosign.key ghcr.io/dyrector-io/dyrectorio/agent/crane:${GITHUB_SHA::7}
+      env:
+        COSIGN_PASSWORD: "${{ secrets.COSIGN_PASSWORD }}"
+   
