--- a/agent/Makefile
+++ b/agent/Makefile
@@ -110,7 +110,7 @@ test-unit: # dependency: valid & working k8s configuration
 	go test -tags=unit -race ./... 
 
 test-unit-with-coverage: # dependency: valid & working k8s configuration
-	go test -tags=unit -race -coverpkg=./... -coverprofile=./coverage.cov ./... -covermode=atomic
+	go test -tags=unit -race -coverpkg=./... -coverprofile=./coverage.cov -covermode=atomic ./...
 
 test-dagent-docker:
 	go test -tags=integration -race ./pkg/dagent/...
