--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -10,7 +10,6 @@ permissions:
   pull-requests: read
   packages: write
 
-
 env:
   # Environments
   GOFLAGS: "-buildvcs=false"
@@ -18,7 +17,7 @@ env:
 jobs:
 
   select_version:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - name: prepare
       run: |
@@ -32,9 +31,9 @@ jobs:
             ;;
           esac
         fi
-      
+
   lint:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
     defaults:
@@ -46,9 +45,10 @@ jobs:
     - name: Load go mod
       run: go mod tidy
     - name: Run golangci-lint
-      run: pwd && make lint
+      run: make lint
+
   security:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
     defaults:
@@ -63,7 +63,7 @@ jobs:
       run: make security
 
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [security, lint]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
@@ -76,14 +76,15 @@ jobs:
     - name: Load go mod
       run: go mod tidy
     - name: Run unit tests
-      run: make test-unit
+      run: make test
     # if we go public this is free from codecov.io
+    # todo: replace & fix unit test coverage above 
     # - uses: codecov/codecov-action@v3
     #   with:
     #     files: ./coverage.cov
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [test]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
@@ -91,7 +92,7 @@ jobs:
       run:
         working-directory: agent
     steps:
-      - name: Login to GitHub Container Registry
+      - name: Login to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -120,13 +121,10 @@ jobs:
 
   sign_image:
     runs-on: ubuntu-20.04
-
     if: github.ref == 'refs/heads/develop' ||  github.ref == 'refs/heads/main'
-
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
     needs: build
-    
     environment: Workflow - Protected
     steps:
     - name: Write signing key to disk
@@ -149,4 +147,4 @@ jobs:
         cosign sign --key cosign.key ghcr.io/dyrector-io/dyrectorio/crane:${GITHUB_SHA::7}
       env:
         COSIGN_PASSWORD: "${{ secrets.COSIGN_PASSWORD }}"
-   
+ 
