--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -8,21 +8,143 @@ on:
 permissions:
   contents: read
   pull-requests: read
+  packages: write
+
+env:
+  # Environments
+  GOFLAGS: "-buildvcs=false"
 
 jobs:
-  check:
-    runs-on: ubuntu-latest
+
+  select_version:
+    runs-on: ubuntu-20.04
+    steps:
+    - name: prepare
+      run: |
+        if [ $GITHUB_REF_TYPE == "branch" ]; then
+          case $GITHUB_REF in
+            "main")
+            echo "agent_tag=stable" >> $GITHUB_ENV
+            ;;
+            "develop")
+            echo "agent_tag=latest" >> $GITHUB_ENV
+            ;;
+          esac
+        fi
+
+  lint:
+    runs-on: ubuntu-20.04
     container:
-      image: golang:alpine3.16
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
     defaults:
       run:
         working-directory: agent
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: Load go mod
+      run: go mod tidy
+    - name: Run golangci-lint
+      run: make lint
 
-    - name: Build crane
-      run: go build cmd/crane/crane.go 
+  security:
+    runs-on: ubuntu-20.04
+    container:
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
+    defaults:
+      run:
+        working-directory: agent
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Load go mod
+      run: go mod tidy
+    - name: Run gosec
+      run: make security
 
-    - name: Build dagent
-      run: go build cmd/dagent/dagent.go 
+  test:
+    runs-on: ubuntu-20.04
+    needs: [security, lint]
+    container:
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
+    defaults:
+      run:
+        working-directory: agent
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Load go mod
+      run: go mod tidy
+    - name: Run unit tests
+      run: make test
+    # if we go public this is free from codecov.io
+    # todo: replace & fix unit test coverage above 
+    # - uses: codecov/codecov-action@v3
+    #   with:
+    #     files: ./coverage.cov
+
+  build:
+    runs-on: ubuntu-20.04
+    needs: [test]
+    container:
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
+    defaults:
+      run:
+        working-directory: agent
+    steps:
+      - name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      # fixes: fatal: unsafe repository 
+      - name: Adding workspace
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
+      - name: Load go mod
+        run: go mod tidy
+
+      - name: Compile
+        run: make compile-both
+
+      - name: Docker build with latest tag
+        if: github.ref == 'refs/heads/develop'
+        run: make image_version=latest bbpb
+
+      - name: Docker build with stable tag
+        if: github.ref == 'refs/heads/main'
+        run: make image_version=stable bbpb
+
+  sign_image:
+    runs-on: ubuntu-20.04
+    if: github.ref == 'refs/heads/develop' ||  github.ref == 'refs/heads/main'
+    container:
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
+    needs: build
+    environment: Workflow - Protected
+    steps:
+    - name: Write signing key to disk
+      run: echo "${{ secrets.COSIGN_PRIVATE_KEY }}" > cosign.key
+
+    - name: Login to GHCR
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GHCR_PAT }}
+
+    - name: Sign container image dagent
+      run: | 
+        cosign sign --key cosign.key ghcr.io/dyrector-io/dyrectorio/dagent:${GITHUB_SHA::7}
+      env:
+        COSIGN_PASSWORD: "${{ secrets.COSIGN_PASSWORD }}"
+    - name: Sign container image crane
+      run: |
+        cosign sign --key cosign.key ghcr.io/dyrector-io/dyrectorio/crane:${GITHUB_SHA::7}
+      env:
+        COSIGN_PASSWORD: "${{ secrets.COSIGN_PASSWORD }}"
+ 
