--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -16,22 +16,6 @@ env:
 
 jobs:
 
-  select_version:
-    runs-on: ubuntu-20.04
-    steps:
-    - name: prepare
-      run: |
-        if [ $GITHUB_REF_TYPE == "branch" ]; then
-          case $GITHUB_REF in
-            "main")
-            echo "agent_tag=stable" >> $GITHUB_ENV
-            ;;
-            "develop")
-            echo "agent_tag=latest" >> $GITHUB_ENV
-            ;;
-          esac
-        fi
-
   lint:
     runs-on: ubuntu-20.04
     container:
@@ -67,6 +51,8 @@ jobs:
     needs: [security, lint]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
+    outputs:
+      tag: ${{ steps.settag.outputs.tag }}
     defaults:
       run:
         working-directory: agent
@@ -83,11 +69,29 @@ jobs:
     #   with:
     #     files: ./coverage.cov
 
+    - name: Setting a buildtag
+      id: settag
+      run: |
+        if [ $GITHUB_REF_TYPE == "branch" ]; then
+          case ${{ github.ref_name }} in
+            "main")
+              echo "::set-output name=tag::stable"
+              ;;
+            "develop")
+              echo "::set-output name=tag::latest"
+              ;;
+            *)
+              echo "::set-output name=tag::${{ github.sha }}"
+              ;;
+          esac
+        fi
+
   build:
     runs-on: ubuntu-20.04
     needs: [test]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
+    if: github.ref_name == 'develop' || github.ref_name == 'main'
     defaults:
       run:
         working-directory: agent
@@ -111,20 +115,16 @@ jobs:
       - name: Compile
         run: make compile-both
 
-      - name: Docker build with latest tag
-        if: github.ref == 'refs/heads/develop'
-        run: make image_version=latest bbpb
+      - name: Docker build with a fitting tag
+        run: make image_version=${{ needs.test.outputs.tag }} bbpb
 
-      - name: Docker build with stable tag
-        if: github.ref == 'refs/heads/main'
-        run: make image_version=stable bbpb
 
   sign_image:
     runs-on: ubuntu-20.04
     if: github.ref == 'refs/heads/develop' ||  github.ref == 'refs/heads/main'
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
-    needs: build
+    needs: [build,test]
     environment: Workflow - Protected
     steps:
     - name: Write signing key to disk
@@ -139,12 +139,12 @@ jobs:
 
     - name: Sign container image dagent
       run: | 
-        cosign sign --key cosign.key ghcr.io/dyrector-io/dyrectorio/dagent:${GITHUB_SHA::7}
+        cosign sign --key cosign.key ghcr.io/dyrector-io/dyrectorio/dagent:${{ needs.test.outputs.tag }}
       env:
         COSIGN_PASSWORD: "${{ secrets.COSIGN_PASSWORD }}"
     - name: Sign container image crane
       run: |
-        cosign sign --key cosign.key ghcr.io/dyrector-io/dyrectorio/crane:${GITHUB_SHA::7}
+        cosign sign --key cosign.key ghcr.io/dyrector-io/dyrectorio/crane:${{ needs.test.outputs.tag }}
       env:
         COSIGN_PASSWORD: "${{ secrets.COSIGN_PASSWORD }}"
  
