fix: fix kratos admin url and add launch.json

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -1,4 +1,4 @@
-KRATOS_URL=http://172.17.0.1:8000/kratos
+KRATOS_ADMIN_URL=http://172.17.0.1:9434
 DATABASE_URL="postgresql://postgres:password@localhost:5432/crux?schema=public"
 CRUX_UI_URL=http://172.17.0.1:8000
 CRUX_ADDRESS=172.17.0.1:5000
